corrijo anotaciones de swagger
